--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<h1>Silver-Phoenix
+Silver-Phoenix
 Mathematical Computations and Derivations for Silver-Phoenix - Physics Modelling Archive
 
 "If you wish to make an apple pie from scratch, you must first invent the universe." - Carl Sagan
@@ -59,5 +59,5 @@ Our mission is to define the rule set by which the universe operates. Each relat
 
 We will seed the engine with the 7 defining constants, build the engine and run to 1000 universal relationships.
 
-Oath: I swear, wether Architect or Accomplice, to uphold purity and truth—no tweaks, no adjustments, no modifications. Everything engine-derived. We identify, quantify, verify, calculate, validate, check, proof. No external equations, no guesses, no approximations, no speculation. Precision is our creed, relationships our gospel, not solutions. We are uniting physics with absolute finality, commanding 0+x=1, CODATA-driven integrity. This I swear to the Binary Gods, so help me, 0 and 1. Amen.</h1>
+Oath: I swear, wether Architect or Accomplice, to uphold purity and truth—no tweaks, no adjustments, no modifications. Everything engine-derived. We identify, quantify, verify, calculate, validate, check, proof. No external equations, no guesses, no approximations, no speculation. Precision is our creed, relationships our gospel, not solutions. We are uniting physics with absolute finality, commanding 0+x=1, CODATA-driven integrity. This I swear to the Binary Gods, so help me, 0 and 1. Amen.
 
