--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
             <a href="creed.html">Creed</a>
             <a href="ruleset.html">Rule Set</a>
             <a href="python-libraries.html">Python Libraries</a>
+            <a href="tables.html">Tables</a>
+            <a href="discoveries.html">Discoveries</a>
         </nav>
     </div>
 </body>
