--- a/creed.html
+++ b/creed.html
@@ -33,7 +33,7 @@
 <body>
     <div class="container">
         <h1>Creed</h1>
-        <p>[Creed content goes here]</p>
+        <p>[Identify, Quanitfy, Verify, Calculate, Validate, Check, Proof]</p>
         <p><a href="index.html">Back to Home</a></p>
     </div>
 </body>
