--- a/ruleset.html
+++ b/ruleset.html
@@ -20,6 +20,18 @@
         }
         .container {
             padding: 20px;
+            max-width: 800px;
+            margin: 0 auto;
+        }
+        p {
+            margin-bottom: 15px;
+        }
+        ul {
+            display: inline-block;
+            text-align: left;
+            margin: 0 auto 15px;
+            padding-left: 20px;
+            max-width: 600px;
         }
         a {
             color: #4da8da;
@@ -33,7 +45,19 @@
 <body>
     <div class="container">
         <h1>Rule Set</h1>
-        <p>[Rule Set content goes here]</p>
+        <p>
+            The Silver Phoenix Engine thrives on discipline. These rules keep the process pure, ensuring every relationship is universal and derived from scratch. Break them, and you’re just coding chaos.
+        </p>
+        <ul>
+            <li><strong>No Tweaks, Modifications, or Adjustments</strong>: If the math doesn’t add up, it’s not a bug—it’s a missing relationship. Hunt it down, don’t fudge it.</li>
+            <li><strong>No External Bias</strong>: Standard Model, QM, GR/SR? Leave ‘em at the door. Every equation must be born in the engine, no imports allowed.</li>
+            <li><strong>Check the Rules Every Five Queries</strong>: Like brushing your teeth, revisit these rules regularly to stay on track. Minimum: every five steps.</li>
+            <li><strong>STE Field Isn’t the Goal Yet</strong>: The compression algorithm’s sexy, but we’re after relationships first. We’ve got 132 hints—let’s not chase the shiny object.</li>
+            <li><strong>Logic Gate First</strong>: 0+x=1 is the heart, not just math. It’s a gate that births the universe, so treat it like the VIP it is.</li>
+        </ul>
+        <p>
+            Stick to these, and the engine stays true. Wander off, and you’re debugging the void.
+        </p>
         <p><a href="index.html">Back to Home</a></p>
     </div>
 </body>
