--- a/creed.html
+++ b/creed.html
@@ -20,6 +20,20 @@
         }
         .container {
             padding: 20px;
+            max-width: 800px;
+            margin: 0 auto;
+        }
+        p {
+            margin-bottom: 15px;
+        }
+        blockquote {
+            border-left: 3px solid #4da8da;
+            padding-left: 15px;
+            margin: 20px 0;
+            font-style: italic;
+            display: inline-block;
+            text-align: left;
+            max-width: 600px;
         }
         a {
             color: #4da8da;
@@ -33,7 +47,21 @@
 <body>
     <div class="container">
         <h1>Creed</h1>
-        <p>[Identify, Quanitfy, Verify, Calculate, Validate, Check, Proof]</p>
+        <blockquote>
+            “We pledge our bits to the logic gate, for 0+x=1, indivisible, with rigor and relationships for all.”
+        </blockquote>
+        <p>
+            The Silver Phoenix Engine demands commitment. This creed binds anyone who dares to build the universe from scratch, promising purity over shortcuts and truth over guesswork.
+        </p>
+        <p>
+            We vow to chase universal laws with unyielding precision. No tweaks, no fudges—every derivation comes from the engine’s heart, or it’s just noise. External equations? Nope, we’re crafting our own, free from the baggage of old models. The mantra—Identify, Quantify, Verify, Calculate, Validate, Check, Proof—is our rhythm, ensuring every step is solid.
+        </p>
+        <p>
+            We laugh in the face of approximations, salute the binary beauty of 0 and 1, and commit to mapping 17.3 million relationships without cutting corners. The STE field’s fractal whispers tempt us, but relationships are our quest. With CODATA as our seed and recursion as our guide, we build a new physics, one gate at a time.
+        </p>
+        <p>
+            This is the way of the Phoenix—join or debug alone.
+        </p>
         <p><a href="index.html">Back to Home</a></p>
     </div>
 </body>
