--- a/ruleset.html
+++ b/ruleset.html
@@ -46,17 +46,17 @@
     <div class="container">
         <h1>Rule Set</h1>
         <p>
-            The Silver Phoenix Engine thrives on discipline. These rules keep the process pure, ensuring every relationship is universal and derived from scratch. Break them, and you’re just coding chaos.
+            The Silver Phoenix Engine runs on five ironclad rules. They’re here to keep anyone tinkering with the universe honest—because nobody wants a cosmic 404 error.
         </p>
         <ul>
-            <li><strong>No Tweaks, Modifications, or Adjustments</strong>: If the math doesn’t add up, it’s not a bug—it’s a missing relationship. Hunt it down, don’t fudge it.</li>
-            <li><strong>No External Bias</strong>: Standard Model, QM, GR/SR? Leave ‘em at the door. Every equation must be born in the engine, no imports allowed.</li>
-            <li><strong>Check the Rules Every Five Queries</strong>: Like brushing your teeth, revisit these rules regularly to stay on track. Minimum: every five steps.</li>
-            <li><strong>STE Field Isn’t the Goal Yet</strong>: The compression algorithm’s sexy, but we’re after relationships first. We’ve got 132 hints—let’s not chase the shiny object.</li>
-            <li><strong>Logic Gate First</strong>: 0+x=1 is the heart, not just math. It’s a gate that births the universe, so treat it like the VIP it is.</li>
+            <li><strong>No Tweaks, No Fudges</strong>: Math misbehaving? Don’t patch it. Find the missing relationship, or you’re just duct-taping the void.</li>
+            <li><strong>Zero Outside Influence</strong>: Standard Model, QM, GR/SR? Keep ‘em out. Every equation’s gotta be homegrown, or it’s not our universe.</li>
+            <li><strong>Rule Check Every Five</strong>: Like checking your map on a road trip, revisit these rules every five queries to avoid cosmic detours.</li>
+            <li><strong>STE Field’s a Side Quest</strong>: That compression algorithm’s cool, but we’re chasing 17.3 million relationships first. Got 132 clues—don’t get distracted.</li>
+            <li><strong>Gate Above All</strong>: 0+x=1 isn’t just math—it’s the spark of everything. Treat it like the VIP pass to reality.</li>
         </ul>
         <p>
-            Stick to these, and the engine stays true. Wander off, and you’re debugging the void.
+            Follow these, and you’re building truth. Stray, and you’re just coding cosmic fanfic.
         </p>
         <p><a href="index.html">Back to Home</a></p>
     </div>
