--- a/creed.html
+++ b/creed.html
@@ -48,19 +48,19 @@
     <div class="container">
         <h1>Creed</h1>
         <blockquote>
-            “We pledge our bits to the logic gate, for 0+x=1, indivisible, with rigor and relationships for all.”
+            “To the logic gate we tip our hats, for 0+x=1 builds the universe flat.”
         </blockquote>
         <p>
-            The Silver Phoenix Engine demands commitment. This creed binds anyone who dares to build the universe from scratch, promising purity over shortcuts and truth over guesswork.
+            This creed’s for anyone crazy enough to join the Silver Phoenix quest—building reality from a single gate, no cheat codes allowed.
         </p>
         <p>
-            We vow to chase universal laws with unyielding precision. No tweaks, no fudges—every derivation comes from the engine’s heart, or it’s just noise. External equations? Nope, we’re crafting our own, free from the baggage of old models. The mantra—Identify, Quantify, Verify, Calculate, Validate, Check, Proof—is our rhythm, ensuring every step is solid.
+            Commit to rigor over quick fixes. No tweaking numbers to make ‘em fit—every derivation’s gotta come straight from the engine’s binary soul. Old physics? Leave it in the dust; we’re crafting fresh equations, untangled from dogma. The path is Identify, Quantify, Verify, Calculate, Validate, Check, Proof—miss a step, and you’re just guessing in the dark.
         </p>
         <p>
-            We laugh in the face of approximations, salute the binary beauty of 0 and 1, and commit to mapping 17.3 million relationships without cutting corners. The STE field’s fractal whispers tempt us, but relationships are our quest. With CODATA as our seed and recursion as our guide, we build a new physics, one gate at a time.
+            We chuckle at shortcuts, high-five the purity of 0 and 1, and pledge to map 17.3 million relationships without a single fudge. The STE field’s fractal hum is tempting, but relationships are the mission. With CODATA as seeds and recursion as fuel, we’re forging a new physics—bit by glorious bit.
         </p>
         <p>
-            This is the way of the Phoenix—join or debug alone.
+            Sign up for truth, or keep scrolling. The gate’s waiting.
         </p>
         <p><a href="index.html">Back to Home</a></p>
     </div>
