--- a/tables.html
+++ b/tables.html
@@ -46,7 +46,7 @@
     <div class="container">
         <h1>Tables</h1>
         <p>
-            The Silver Phoenix Engine’s data lives here, raw and ready for scrutiny. These sections organize our inputs, outputs, and mappings, all derived from the logic gate’s relentless march.
+            The engine’s raw data lives here—inputs, outputs, and connections, all straight from the logic gate’s grind. No fluff, just facts.
         </p>
         <ul>
             <li><a href="codata.html">CODATA (Verified and Unverified)</a></li>
@@ -54,7 +54,7 @@
             <li><a href="mapping.html">Mapping</a></li>
         </ul>
         <p>
-            Each link dives into the engine’s numbers—choose your path wisely.
+            Dig into the numbers that build the universe, one relationship at a time.
         </p>
         <p><a href="index.html">Back to Home</a></p>
     </div>
