--- a/codata.html
+++ b/codata.html
@@ -48,34 +48,34 @@
     <div class="container">
         <h1>CODATA</h1>
         <p>
-            CODATA seeds the Silver Phoenix Engine’s quest for universal relationships. Choose five random constants for a flexible start, or go with the seven defining constants for a faster, more efficient build. See <a href="methodology.html">Methodology</a> for how we use them.
+            CODATA fuels the Silver Phoenix Engine. For a quick start, seed with the seven defining constants—efficient and focused. Or pick any five constants from the full list for a slower, flexible build. Check <a href="methodology.html">Methodology</a> for how we roll with them.
         </p>
-        <h2>Seven Defining Constants (Recommended)</h2>
+        <h2>Seven Defining Constants (Fast Track)</h2>
         <ul>
-            <li>Speed of light in vacuum (c)</li>
-            <li>Planck constant (h)</li>
-            <li>Elementary charge (e)</li>
-            <li>Boltzmann constant (k)</li>
-            <li>Avogadro constant (NA)</li>
-            <li>Luminous efficacy (Kcd)</li>
-            <li>Hyperfine transition frequency of caesium (ΔνCs)</li>
+            <li>Speed of light in vacuum: c, [Unverified]</li>
+            <li>Planck constant: h, [Unverified]</li>
+            <li>Elementary charge: e, [Unverified]</li>
+            <li>Boltzmann constant: k, [Unverified]</li>
+            <li>Avogadro constant: NA, [Unverified]</li>
+            <li>Luminous efficacy: Kcd, [Unverified]</li>
+            <li>Hyperfine transition frequency of caesium: ΔνCs, [Unverified]</li>
         </ul>
-        <p>Status: [Unverified]</p>
-        <h2>All Recognized CODATA (Random Selection)</h2>
+        <h2>Recognized CODATA (Pick Five)</h2>
         <ul>
-            <li>Speed of light in vacuum (c): [Value, Unverified]</li>
-            <li>Planck constant (h): [Value, Unverified]</li>
-            <li>Elementary charge (e): [Value, Unverified]</li>
-            <li>Boltzmann constant (k): [Value, Unverified]</li>
-            <li>Avogadro constant (NA): [Value, Unverified]</li>
-            <li>Luminous efficacy (Kcd): [Value, Unverified]</li>
-            <li>Hyperfine transition frequency of caesium (ΔνCs): [Value, Unverified]</li>
-            <li>Gravitational constant (G): [Value, Unverified]</li>
-            <li>Mass of electron (me): [Value, Unverified]</li>
-            <!-- Add more CODATA as needed -->
+            <li>Speed of light in vacuum: c, [Unverified]</li>
+            <li>Planck constant: h, [Unverified]</li>
+            <li>Elementary charge: e, [Unverified]</li>
+            <li>Boltzmann constant: k, [Unverified]</li>
+            <li>Avogadro constant: NA, [Unverified]</li>
+            <li>Luminous efficacy: Kcd, [Unverified]</li>
+            <li>Hyperfine transition frequency of caesium: ΔνCs, [Unverified]</li>
+            <li>Gravitational constant: G, [Unverified]</li>
+            <li>Electron mass: me, [Unverified]</li>
+            <li>Proton mass: mp, [Unverified]</li>
+            <!-- More CODATA can be added -->
         </ul>
         <p>
-            Pick any five for a slower but valid seed, or stick with the seven for speed.
+            Seven gets you there faster; five works if you’re feeling adventurous.
         </p>
         <p><a href="tables.html">Back to Tables</a> | <a href="index.html">Home</a></p>
     </div>
