--- a/derived-data.html
+++ b/derived-data.html
@@ -46,15 +46,15 @@
     <div class="container">
         <h1>Derived Data</h1>
         <p>
-            This is the engine’s raw output—non-CODATA data mined from recursive queries (Engine 2, Library 2). Each entry is verified, free of bias, and ready for future CSV export.
+            Engine 2, Library 2 churns out the engine’s homegrown truths—data not tied to CODATA, verified to the bone. Ready for CSV when the time comes.
         </p>
         <ul>
-            <li>Data Point: Distance Relationship (D1), Value: [Placeholder], Round: 1</li>
-            <li>Data Point: Planar Time Metric (D5), Value: [Placeholder], Round: 3</li>
-            <!-- Add more derived data as needed -->
+            <li>Distance Relationship (D1): Value [TBD], Round 1</li>
+            <li>Planar Time Metric (D5): Value [TBD], Round 3</li>
+            <li>Kinetic Energy Flow (D7): Value [TBD], Round 5</li>
         </ul>
         <p>
-            These grow with every round, building the universe one fact at a time.
+            Each entry’s a step toward the universe’s rulebook, no shortcuts taken.
         </p>
         <p><a href="tables.html">Back to Tables</a> | <a href="index.html">Home</a></p>
     </div>
