--- a/python-libraries-code.html
+++ b/python-libraries-code.html
@@ -55,7 +55,117 @@
             Code to define 17.3 million dimensional relationships, like D1’s distance and D4’s duration sharing a linear equation.
         </p>
         <ul>
-            <li>[Placeholder: Code for D1 linear equation, x2-x1]</li>
+            <li>import pandas as pd
+import networkx as nx
+import numpy as np
+import random
+import pickle
+
+# Engine 1: Relationship Data
+class Engine1:
+    def __init__(self):
+        self.graph = nx.DiGraph()  # Directed graph for relationships
+        self.dimensions = {
+            'D1': 'linear', 'D4': 'linear', 'D7': 'linear', 'D10': 'linear',
+            'D2': 'planar', 'D5': 'planar', 'D8': 'planar', 'D11': 'planar',
+            'D3': 'spatial', 'D6': 'spatial', 'D9': 'spatial', 'D12': 'spatial'
+        }
+        self.force_triggers = {
+            'planck': ['D1', 'D4', 'D7'],
+            'magnetism': ['D2', 'D5', 'D8'],
+            'gravity': ['D3', 'D6', 'D9']
+        }
+        self.relationships = []  # List to store relationship metadata
+        self.ste_field = {}  # Space-Time-Energy field state
+
+    def add_relationship(self, dim1, dim2, rel_type, metadata=None):
+        """Add a relationship between dimensions or sets."""
+        self.graph.add_edge(dim1, dim2, type=rel_type, meta=metadata or {})
+        self.relationships.append({
+            'dim1': dim1, 'dim2': dim2, 'type': rel_type, 'meta': metadata
+        })
+        self.update_ste_field(dim1, dim2)
+
+    def update_ste_field(self, dim1, dim2):
+        """Update STE field based on force triggers."""
+        for force, triggers in self.force_triggers.items():
+            if dim1 in triggers or dim2 in triggers:
+                self.ste_field[(dim1, dim2)] = self.ste_field.get((dim1, dim2), 0) + 1
+                # Placeholder: Compute force propagation backward
+
+    def save(self, filename='engine1_data.pkl'):
+        """Serialize Engine 1 data."""
+        with open(filename, 'wb') as f:
+            pickle.dump(self, f)
+
+# Engine 2: Data Processing and Mapping
+class Engine2:
+    def __init__(self):
+        self.l1_codata = pd.DataFrame(columns=['key', 'value', 'status'])
+        self.l2_derived = pd.DataFrame(columns=['key', 'value', 'verified'])
+        self.l3_mapping = pd.DataFrame(columns=['rel_id', 'name', 'value'])
+
+    def seed_codata(self, codata_list, n=5):
+        """Seed E2L1 with random CODATA inputs."""
+        selected = random.sample(codata_list, n)
+        self.l1_codata = pd.DataFrame(
+            [[k, v, 'UNVERIFIED'] for k, v in selected],
+            columns=['key', 'value', 'status']
+        )
+
+    def verify_codata(self, key):
+        """Asymmetrically verify CODATA (placeholder)."""
+        # TODO: Define asymmetric verification logic
+        self.l1_codata.loc[self.l1_codata['key'] == key, 'status'] = 'VERIFIED'
+
+    def add_derived_data(self, key, value):
+        """Add to E2L2 with verification."""
+        verified = self.verify_derived(key, value)
+        new_row = pd.DataFrame([[key, value, verified]], columns=['key', 'value', 'verified'])
+        self.l2_derived = pd.concat([self.l2_derived, new_row], ignore_index=True)
+
+    def verify_derived(self, key, value):
+        """Verify no circular logic or bias (placeholder)."""
+        # TODO: Implement recursive checks and bias detection
+        return True  # Temporary
+
+    def map_relationship(self, rel_id, name, value):
+        """Add mapping to E2L3."""
+        new_row = pd.DataFrame([[rel_id, name, value]], columns=['rel_id', 'name', 'value'])
+        self.l3_mapping = pd.concat([self.l3_mapping, new_row], ignore_index=True)
+
+    def save(self, filename='engine2_data.pkl'):
+        """Serialize Engine 2 data."""
+        with open(filename, 'wb') as f:
+            pickle.dump(self, f)
+
+# Example Usage
+if __name__ == "__main__":
+    # Initialize engines
+    e1 = Engine1()
+    e2 = Engine2()
+
+    # Add a sample relationship to Engine 1
+    e1.add_relationship('D1', 'D4', 'point-to-point', {'math': 'linear', 'force': 'planck'})
+
+    # Seed Engine 2 with sample CODATA
+    sample_codata = [
+        ('planck_constant', 6.62607015e-34),
+        ('speed_of_light', 299792458),
+        ('gravitational_constant', 6.67430e-11),
+        ('electron_mass', 9.1093837e-31),
+        ('boltzmann_constant', 1.380649e-23)
+    ]
+    e2.seed_codata(sample_codata)
+
+    # Map a relationship in E2L3
+    e2.map_relationship('D1-D4', 'Planck_Linear', 6.62607015e-34)
+
+    # Save state
+    e1.save()
+    e2.save()
+
+    print("Engines initialized and sample data added!")</li>
             <li>[Placeholder: Code for D4 linear equation, t2-t1]</li>
         </ul>
         <h2>Engine 2 - E2L1 CODATA</h2>
